# video_to_mps

./: .gitignore  Makefile  db.sqlite3  manage.py  pyproject.toml
mediaextractor/: apps.py  forms.py  models.py  urls.py  views.py
mediaextractor/migrations/: 0001_initial.py
video_to_mps/: asgi.py  settings.py  urls.py  wsgi.py
video_to_mps/templates/mediaextractor/: upload.html
