[tool.poetry]
name = "video-to-mps"
version = "0.1.0"
description = ""
authors = ["Ivan Scherbakov <lolwut155@gmail.com>"]
readme = "README.md"
packages = [{include = "video_to_mps"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
moviepy = "^1.0.3"
flake8 = "^7.1.1"
crispy-bootstrap5 = "^2024.2"
django-crispy-forms = "^2.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
